--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.0.0",
     "@tensorflow/tfjs-vis": "^1.4.1",
-    "papaparse": "^5.3.2"
+    "awesome-typescript-loader": "^5.2.1",
+    "papaparse": "^5.3.2",
+    "source-map-loader": "^4.0.1"
   }
 }
